syntax = "proto3";

option csharp_namespace = "ByteAwesome.NotificationAPI.Grpc";

package NotificationAPIGrpc;

service NotisGrpcService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
  rpc SendSMS (SendSMSRequest) returns (SendSMSResponse);
  rpc NotifyUser (NotifyUserRequest) returns (NotifyUserResponse);
}

// Email
message SendEmailRequest {
  string receiverEmail = 1;
  string receiverName = 2;
  string subject = 3;
  string content = 4;
  string languageCode = 5;
}

message SendEmailResponse {
  bool success = 1;
  string error_message = 2;
}

// SMS
message SendSMSRequest {
  string receiverPhone = 1;
  string subject = 2;
  string content = 3;
  string languageCode = 4;
}

message SendSMSResponse {
  bool success = 1;
  string error_message = 2;
}

// Notify User
message NotifyUserRequest {
  string userid = 1;
  string eventName = 2;
  string payloadJson = 3;
  string approverUserName = 4;
  string languageCode = 5;
}

message NotifyUserResponse {
  bool success = 1;
  string error_message = 2;
}

