namespace ByteAwesome
{
    public static class ErrorCodes
    {
        public static class General
        {
            // public const string HostTerminated = "1001";
            public const string UnhandledError = "1002";
            // public const string EntityGetById = "1003";
            // public const string EntityAdd = "1004";
            // public const string EntityUpdate = "1005";
            // public const string EntityDelete = "1006";
            public const string EntityGetAll = "1007";
            // public const string LoadLanguages = "1008";
            // public const string DecryptString = "1009";
            // public const string NotifyUser = "1010";
            public const string JsonDataParse = "1011";
            public const string PleaseLogin = "1012";
            public const string EntityNameNotFound = "1013";
            // public const string RedisConnection = "1014";
            public const string InvalidField = "1015";
            public const string Unauthorized = "1016";
            // public const string GetByUserId = "1017";
            public const string ComingSoon = "9999";
            public const string EntityAlreadyDeleted = "1018";
            public const string ConfigNotFound = "1019";
            // public const string EncryptString = "1009";
            public const string EntityDuplicate = "1020";
            public const string EntitiesNotFound = "1021";
        }
        public static class User
        {
            public const string RoleAlreadyExists = "U1001";
            public const string KycFinalRejected = "U1002";
            public const string KycApproved = "U1003";
            public const string KycLevelAlreadyApproved = "U1004";
            public const string UserAddFailed = "U1005";
            public const string UserNotExists = "U1006";
            public const string UserLoginFailed = "U1007";
            public const string TwoFactorAlreadyEnabled = "U1008";
            public const string EnableDisablePassKeyError = "U1009";
            // public const string UserGetAllFailed = "U1010";
            public const string SendConfirmationEmail = "U1011";
            public const string InvalidUserLoginIdentity = "U1012";
            public const string UserIsNotActive = "U1013";
            public const string UserLockedOut = "U1014";
            public const string InvalidPassword = "U1015";
            public const string RequireOtpToVerifyEmail = "U1016";
            public const string RequireTwoFactorPin = "U1017";
            public const string RequireLoginOtp = "U1018";
            public const string GetMyUserInfo = "U1019";
            public const string GetUserInfoByUserIdentity = "U1020";
            public const string UserNewPasswordNotMatch = "U1021";
            public const string ChangeUserPassword = "U1022";
            public const string UpdateUserProfile = "U1023";
            public const string UserLogoutFailed = "U1024";
            public const string UpdateUserPhoneNumber = "U1025";
            public const string GetTwoFactorAuthInfo = "U1026";
            public const string EnableOrDisableTwoFactorAuth = "U1027";
            public const string DeleteMyAccount = "U1028";
            public const string SendLoginOtpEmail = "U1029";
            public const string SendConfirmationPhone = "U1030";
            public const string VerifyPhoneNumber = "U1031";
            public const string SendForgotPasswordEmail = "U1032";
            public const string ChangeUserPasswordByEmail = "U1033";
            // public const string GenerateAccessToken = "U1034";
            // public const string DecryptString = "U1035";
            public const string GetMyUserLoginSessions = "U1036";
            public const string PassKeyNotEnabled = "U1037";
            public const string UserNameAlreadyExists = "U1038";
            public const string EmailAddressAlreadyExists = "U1039";
            public const string PhoneNumberAlreadyExists = "U1040";
            // public const string GetRoleByName = "U1041";
            public const string UserWithoutPhone = "U1042";
            public const string PendingVerifyCredential = "U1043";
            // public const string IdentityTypeAlreadyExists = "U1044";
            // public const string OTPError = "U1045";
            public const string PhoneAlreadyVerified = "U1046";
            // public const string GetUserRoleByUser = "U1047";
            // public const string UserGrpcError = "U1048";
            // public const string GetKycAccessTokenError = "U1049";
            // public const string RegisterPasskeyError = "U1050";
            // public const string AddPasskeyCredentialError = "U1051";
            // public const string PasskeyLoginError = "U1052";
            public const string PasskeyAssertionError = "U1053";
            public const string PassKeyAlreadyEnabled = "U1054";
            public const string PleaseCreatePassKey = "U1055";
            public const string PleaseEnableTwoFactorAuth = "U1056";
            public const string PasskeyAttestationError = "U1057";
            public const string EmailAlreadyVerified = "U1058";
            public const string PassKeyAlreadyDisabled = "U1059";
            public const string PassKeyNotRegisterOnPhone = "U1060";
        }
        public static class Secret
        {
            // public const string GenerateAccessToken = "S1001";
            // public const string CreateAccessToken = "S1002";
            // public const string CreateJwtClaims = "S1003";
            // public const string CreateOrUpdateOtp = "S1004";
            // public const string VerifyOTP = "S1005";
            // public const string OTPGetAll = "S1006";
            public const string InvalidOTP = "S1007";
            public const string ExpiredOTP = "S1008";
            public const string UsedOTP = "S1009";
            public const string CreateOrUpdateTFA = "S1010";
            // public const string CreateOrUpdateKmsKeys = "S1011";
            public const string InvalidTFPin = "S1012";
            public const string OTPNotFound = "S1013";
            // public const string GetValidOtpByValue = "S1014";
            // public const string VerifyDataAndDecrypt = "S1015";
            public const string OTPAlreadyRequested = "S1016";
            public const string TFANotFound = "S1017";
            public const string KmsKeysNotFound = "S1018";
        }
        public static class Wallet
        {
            public const string WalletGroupNotFound = "W1001";
            public const string WalletGroupExisted = "W1002";
            public const string SobUserCapacityError = "W1003";
            public const string HasPendingPayment = "W1004";
            public const string PaymentRequired = "W1005";
            public const string WalletPolicyAlreadyActive = "W1006";
            public const string WalletPolicyAlreadyInactive = "W1007";
            public const string InvalidMspUser = "W1008";
            public const string InvalidOwner = "W1009";
            public const string UpgradeRank = "W1010";
            public const string WpUsersRepeatedIds = "W1011";
            public const string WpUsersContainsCurrentUserId = "W1012";
            public const string WpUsersContainsDelegateUserId = "W1013";
            public const string DelegateChangeNotAllowed = "W1014";
            public const string MspMissingCurrentUser = "W1015";
            public const string MultiSignWalletNotFound = "W1016";
            public const string UsersAlreadyInList = "W1017";
            public const string RepeatedSobUserIds = "W1018";
            public const string SobUsersContainCurrentUser = "W1019";
            public const string MinSobUserCount = "W1020";
            public const string MinSobApprovalsHeadCount = "W1021";
            public const string MinSobTriggerWaitingTime = "W1022";
            public const string InvalidSobUser = "W1023";
            public const string InvalidSobRequirement = "W1024";
            public const string FailedToQueryOrder = "W1025";
            public const string FailedToCancelOrder = "W1026";
            public const string PaymentOrderNotFound = "W1027";
            public const string PaymentOrderNotPending = "W1028";
            public const string ProceedPaymentOrderFailed = "W1029";
            public const string WalletBalanceNotEnough = "W1030";
            public const string MultiSignInfoNotFound = "W1031";
            public const string SobUsersSameAsExisting = "W1032";
            // public const string SenderAndReceiverMustBelongToSameOwner = "W1033";
            // public const string FailedDueToNegativeBalance = "W1034";
            public const string SymbolNotSupport = "W1035";
            public const string SymbolNotFound = "W1036";
            public const string InvalidDecimalPlaces = "W1037";
            public const string ExceedMinTransferAmount = "W1038";
            public const string ExceedMaxTransferAmount = "W1039";
            public const string TransactionNotFound = "W1040";
            public const string PendingMultiSignApproval = "W1041";
            public const string NotMultiSignAction = "W1042";
            public const string Authorization = "W1043";
            public const string UserAlreadyApproved = "W1044";
            public const string UserAlreadyRejected = "W1045";
            // public const string NegativeBalance = "W1046";
            public const string ContractAddressNotFound = "W1047";
            // public const string CoSignTransferFailed = "W1048";
            public const string TransferFailedDueToSameAddress = "W1049";
            public const string InactivePolicy = "W1050";
            public const string AddressRequired = "W1051";
            public const string RegexNotFound = "W1052";
            public const string InvalidAddressFormat = "W1053";
            // public const string MultiSignWalletSymbolNotFound = "W1054";
            // public const string DayLimitConfigNotFound = "W1055";
            public const string ExceedDayLimit = "W1056";
            // public const string HugeAmountConfig = "W1057";
            public const string TransferNotAllowed = "W1058";
            public const string TransactionNotPendingApproval = "W1059";
            public const string UserNotFound = "W1060";
            public const string UserHighestRank = "W1061";
            public const string VaultNotFound = "W1062";
            // public const string WalletDelegationNotFound = "W1063";
            public const string OwnerAssetNotFound = "W1064";
            public const string InvalidPercentageSum = "W1065";
            public const string DuplicateWalletGroup = "W1066";
            public const string DuplicateAttWalletGroupIds = "W1067";
            public const string InvalidAttWalletGroupSelection = "W1068";
            public const string InvalidVaultWalletGroup = "W1069";
            public const string InvalidAttVaultWalletGroup = "W1070";
            // public const string Unauthorized = "W1072"; // "You are not authorized."
            // public const string DuplicateWalletGroups = "W1073"; // "Duplicate WalletGroupsIds found: {duplicateIdsString}"
            // public const string AllIdsExistInCurrentCategory = "W1074"; // "Input wallet group Ids are all existed in current category {existingCategory.Name}."
            // public const string WalletExists = "W1075"; // "{existingWallet.WalletData
            public const string NetworkNotFound = "W1071";
            public const string WalletNotFound = "W1076";
            public const string CustomWalletExists = "W1077";
            public const string FailedToAddCustomWallet = "W1078";
            public const string MspUsersRequired = "W1079";
            public const string MspUsersRepeatedIds = "W1080";
            public const string MspUsersMissingCurrentUserId = "W1081";
            public const string MspUsersMinimumCount = "W1082";
            public const string MspApprovalsHeadCountMinimum = "W1083";
            public const string MspApprovalsHeadCountExceedsUserCount = "W1084";
            // public const string WalletGroupNotFoundDelegation = "W1085"; // "Cannot find wallet group with this Id"
            public const string DelegateUserAlreadyHasPolicy = "W1086";
            public const string InvalidDelegateUserNotExists = "W1087";
            public const string InvalidDelegateUserOwner = "W1087";
            public const string WalletPolicyNotFound = "W1088";
            public const string WalletNotFoundForDelegation = "W1089";
            public const string WalletPolicyNotFoundWithPendingStatus = "W1090";
            public const string WalletPolicyInvalid = "W1091";
            public const string ExternalApiImportError = "W1092";
            // public const string ExternalApiError = "W1093"; // "Failed to import price from external API"
            public const string DuplicateSymbolsDetected = "W1094";
            public const string DuplicateAddressDetected = "W1095";
            public const string InvalidCryptocurrencyAddressCharacters = "W1096";
            // public const string LevainUnhandledError = "W1097"; // "Levain Unhandled error."
            // public const string LevainWalletAddressNotFound = "W1098";
            // public const string LevainCustoWalletNotFound = "W1099"; // "Levain custo wallet not found."
            // public const string LevainTransactionNotFound = "W1100";
            // public const string MockCustoWalletUnhandledError = "W1101"; // "Unhandled error in MockCustoWallet."
            // public const string MockCustoWalletNotFound = "W1102";
            // public const string CoSignClientTransferError = "W1103";
            // public const string CoSignClientNoResponse = "W1104";
            // public const string TfaGrpcError = "W1105";
            // public const string TfaGrpcResponseError = "W1106"; // "Error in Tfa GRPC response in TfaGrpcClient."
            // public const string CommisionManagerNegativeBalance = "W1107"; //
            // public const string CommisionManagerAdminWalletGroupIdError = "W1108";
            // public const string CommisionManagerUnhandledError = "W1109"; // "Unhandled error in CommisionManager."
            // public const string CurrentUnitOfWorkSaveError = "W1110";
            // public const string CurrentUnitOfWorkDisposeError = "W1111";
            // public const string CurrentSessionLoginError = "W1112"; // "Please login in CurrentSession."
            // public const string DecodeServiceError = "W1113"; // "Exception occurred while trying to decrypt in DecodeService."
            // public const string BalanceManagementsUnhandledError = "W1114"; // "Unhandled error in BalanceManagements."
            // public const string BalanceManagementsNoSymbolDetected = "W1115";
            // public const string BalanceManagementsInvalidSymbol = "W1116";
            // public const string AssetsRepositoryUnhandledError = "W1117"; // "Unhandled error in AssetsRepository."
            // public const string ChainlessSymbolsRepositoryUnhandledError = "W1118"; // "Unhandled error in ChainlessSymbolsRepository."
            // public const string LevainBalanceUpdateRepositoryUnhandledError = "W1119"; // "Unhandled error in LevainBalanceUpdateRepository."
            // public const string MultiSignPolicyRepositoryUnhandledError = "W1120"; /
            // public const string MultiSignPolicyNotFound = "W1121";
            // public const string NetworksRepositoryUnhandledError = "W1122"; // "Unhandled error in NetworksRepository."
            // public const string SymbolsRepositoryUnhandledError = "W1123"; // "Unhandled error in SymbolsRepository."
            // public const string TransactionsRepositoryUnhandledError = "W1124"; // "Unhandled error in TransactionsRepository."
            // public const string TransactionsNotFound = "W1125"; // "Transactions not found in TransactionsRepository."
            // public const string UserBasicInfoRepositoryUnhandledError = "W1126"; // "Unhandled error in UserBasicInfoRepository."
            // public const string VaultRepositoryUnhandledError = "W1127"; // "Unhandled error in VaultRepository."
            // public const string WalletGroupRepositoryUnhandledError = "W1128"; // "Unhandled error in WalletGroupRepository."
            // public const string WalletPolicyRepositoryUnhandledError = "W1129"; // "Unhandled error in WalletPolicyRepository."
            // public const string WalletRepositoryUnhandledError = "W1130"; // "
            // public const string GetWalletGroupCategories = "W1132";
            // public const string AddWalletGrouptoCategory = "W1133";
            public const string CategoryNotFound = "W1134";
            public const string WalletGroupIDsNotExists = "W1135";
            public const string DuplicateWalletGroupIDs = "W1136";
            // public const string RemoveWalletGroupFromCategory = "W1137";
            public const string WalletGroupNotExistedInCategory = "W1138";
            // public const string CreateWalletGroupCategory = "W1139";
            // public const string UpdateWalletGroupCategory = "W1140";
            // public const string DeleteWalletGroupCategory = "W1141";
            public const string DelegationPolicyInactive = "W1142";
            // public const string CreateUserWalletFailed = "W1143"; //"Failed to CreateUserWallet. Error code: {errorResponse.error_code}, Message: {errorResponse.error_description}."
            // public const string SignatureorPublicKeyNull = "W1144"; //Signature or public key is null.
            // public const string AddChainToWalletFailed = "W1145"; //"Failed to AddChainToWallet. Error code: {errorResponse.Code}, Message: {errorResponse.Message}."
            // public const string TransferFromWalletFailed = "W1146"; //"Failed to TransferFromWallet. Error code: {errorResponse.Code}, Message: {errorResponse.Message}."
            // public const string GetallWalletsFailed = "W1147"; //"Failed to GetallWallets. Error code: {errorResponse.Code}, Message: {errorResponse.Message}."
            // public const string GetTxRecordFailed = "W1148"; //"Failed to GetTxRecord. Error code: {errorResponse.Code}, Message: {errorResponse.Message}."
            // public const string UserWalletFailed = "W1149"; /
            // public const string GraphqlReadfailed = "W1150";
            // public const string QueryMutationNotFound = "W1151";
            public const string WalletGroupTagNotFound = "W1152";
            public const string WalletGroupCommonIdsNotExist = "W1153";
            public const string WalletGroupDuplicateWalletGroupsIds = "W1154";
            // public const string InvalidDelegateUser = "W1155";
            public const string InvalidExpiryDate = "W1156";
            public const string TransferLimitsRequired = "W1157";
            public const string TransferLimitInvalid = "W1158";
            public const string InvalidCryptocurrencyAddressLength = "W1159";
            public const string SobApprovalHeadCountDoesNotMeetRequirement = "W1160";
            public const string TotalNumberOfSobDoesNotMeetRequirement = "W1161";
            public const string ExpiryDateMinimumOneDay = "W1162";
            public const string WalletGroupExistedInCategory = "W1163";
            // public const string CoSignTransferFailedNoTxId = "W1164"; 
            public const string RequirementMinSobApprovalHeadCount = "W1165";
            public const string RequirementMinTotalNumberOfSob = "W1166";
            public const string NotAllowToTransferMspRequirementNotFulfilled = "W1167";
            public const string CurrentUserNotAllowToTransferMspRequirementNotFulfilled = "W1168";
            // public const string TransactionNotPendingWithdrawalCallback = "W1169";
            // public const string NotAllowTransferMultiSignPendingTransaction = "W1170";
            public const string InvalidCallBackId = "W1171";
            public const string VaultAttWalletGroup = "W1172";
            public const string Vault_InvalidAmount = "W1173";
            public const string DuplicateAsset = "W1174";
            // public const string SameWalletGroupTransferFailed = "W1175";
            // public const string RefundFailed = "W1176";
            public const string ExceedsPercentThreshold = "W1177";
            public const string UserNoNetworkWallet = "W1178";
            public const string CannotDeleteMainWalletGroup = "W1179";
            public const string DifferentCallBackTransactionId = "W1180";
            public const string RemainAmountExceedsThreshold = "W1181";
            public const string UserTransferLimitNotFound = "W1182";
            public const string CanNotInputSelf = "W1183";
            public const string SameTransferDestination = "W1184";
            public const string PleaseCreateFirstWalletGroup = "W1185";
            // public const string TransferTargerIdentityRequired = "W1186"; // Transfer target is required.
            // public const string OnlyAllowOneTarget = "W1187"; // 
        }
        public static class Notification
        {
            public const string GetMyNotifySettings = "N1001";
            public const string UpdateMyNotifySettings = "N1002";
            public const string SendEmail = "N1003";
            public const string SendSMS = "N1004";
            public const string RegisterUserSocket = "N1005";
            public const string DeleteUserSocket = "N1006";
            public const string GetMyNotifyInbox = "N1007";
            public const string AddSaveUserNotifySetting = "N1008";
            public const string UpdateMyMessage = "N1009";
            public const string NotisGrpcError = "N1010";
            public const string UserNotifySettingAlreadyExists = "N1011";
            public const string UserDeviceNotFound = "N1012";
            public const string UserMessageNotFound = "N1013";
        }
        public static class Campaign
        {
            public const string CampaignNotFound = "CP1001";
            public const string NotActive = "CP1002";
            public const string NotStarted = "CP1003";
            public const string Ended = "CP1004";
            public const string UserAlreadyClaimed = "CP1005";
            public const string GetCampaignClaimLink = "CP1006";
            public const string InvalidSession = "CP1007";
            public const string SessionExpired = "CP1008";
            public const string GetAllCampaigns = "CP1009";
            public const string MoneyPoolLessThanZero = "CP1010";
            public const string MaxAmountLessThanZero = "CP1011";
            public const string MinGreaterThanMax = "CP1012";
            public const string MinGreaterThanPool = "CP1013";
            public const string MoneyPoolLessThanMax = "CP1014";
            public const string DecimalPlacesLessthanZero = "CP1015";
            public const string MinAmountLessThanZero = "CP1016";
            public const string StartDateGreaterThanEndDate = "CP1017";
            public const string ReclaimCoolDownDaysLessThanZero = "CP1018";
            public const string ReclaimCoolDownDaysNotFound = "CP1019";
            public const string ReclaimCoolDownDaysMustNull = "CP1020";
            public const string RewardNotFound = "CP1021";
            public const string GetCampaignById = "CP1022";
            public const string RewardExceededDecimalPlaces = "CP1023";
        }
        public static class CryptoFinance
        {
            public const string FiatAndCryptoEmpty = "F1001";
            public const string FiatOrCryptoAmountInvalid = "F1002";
            public const string FiatAmountInvalid = "F1003";
            public const string PaymentActionInvalid = "F1004";
            public const string CryptoAmountInvalid = "F1005";
            public const string GetCountriesAndCurrenciesError = "F1006";
            public const string GetPaymentMethodsByFiatAndCryptoError = "F1007";
            public const string GetBestEstimatedPriceOrCryptoAmountError = "F1008";
            public const string GetOrdersError = "F1009";
            public const string CreateOrderError = "F1010";
            public const string SellTokenError = "F1011";
            public const string FiatCurrencyOrCountryInvalid = "F1012";
        }
    }
}
